--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,22 +1,31 @@
-<h2>Signup</h2>
-<form action="/auth/signup" method="POST" id="form-container">
-  <label for="username">Username</label>
-  <input id="username" type="text" name="username" placeholder="JonSnow">
+
+<form action="/auth/signup" method="POST" id="form-container" class="containerform">
+  
+  <div class="headerform">Signup</div>
+  <input id="username" type="text" name="username" placeholder="Username" class='texts'>
+
   <br><br>
 
-  <label for="position">Your Position</label>
-  <div id='geocoder-signup' class='geocoder'></div>
-  {{!-- <input id="position" type="text" name="position" placeholder="Berlin"> --}}
+  <input id="password" type="password" name="password" placeholder="Password" class='passw'>
+
   <br><br>
-  
-  <label for="password">Password</label>
-  <input id="password" type="password" name="password" placeholder="Your password">
+
+  <input id="email" type="email" name="email" placeholder="Email" class='emails'>
   <br>
   {{#if message }}
-    <div class="error-message">{{ message }}</div>
+  <div class="error-message">
+    <pre>{{ message }}</pre>
+  </div>
   {{/if}}
   <br><br>
   <button>Create account</button>
+
+
+  <div class="account-message">
+    <p> Do you already have an account?</p>
+    <a href="/auth/login">Login</a>
+  </div>
+</form>
   <p class="account-message">
     Do you already have an account?
     <a href="/auth/login">Login</a>
