--- a/views/events.hbs
+++ b/views/events.hbs
@@ -1,3 +1,8 @@
+{{!-- <form action="/events-byname" method="GET">
+    <label for="search-by-name">Enter name: </label>
+    <input id="search-by-name" type="text" name="game" value="Default name for team.">
+    <input type="submit" value="Search">
+</form> --}}
 
 <form action="/events-byname" method="GET">
   <div class="form-group d-flex flex-row justify-content-center align-self-center mt-5">
@@ -7,7 +12,6 @@
   </div>
   <div class="text-center">
     <div class="dropdown show">
-      <a href="/add-event" class="btn btn-primary"><i class="far fa-plus-square"></i></a>
       <a class="btn btn-primary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
         aria-haspopup="true" aria-expanded="false">
         Sort your search
@@ -55,5 +59,4 @@
       document.getElementById('sort-by-distance').setAttribute("href", position)
     })
   }
-
 </script>
