--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -4,11 +4,12 @@
   <hr>
     <div class="mx-auto text-center">
   <div>
-    <img class="w-25"src="/images/profile-avatar.png">
+    <img src="../public/images/profile-avatar.png">
   </div>
+
   <h1 class="mt-3 font-weight-bold">{{user.username}}</h1> <br>
   <p class="mt-2">Registered since:</p><p> <strong>{{formatDateProfile user.created_at}}</strong></p>
-
+    
   <div class="flex-column d-flex justify-content-center mt-4">
     <label for="customRange1">Max Distance:</label>
     <p id="rangeValue" class="font-weight-bold"></p>
@@ -68,17 +69,12 @@
 </div>
 
 <script>
-
   var output = document.getElementById('rangeValue')
   var slider = document.getElementById('customRange1')
-
   output.innerHTML = slider.value; // Display the default slider value
-
   // Update the current slider value (each time you drag the slider handle)
   slider.oninput = function () {
     output.innerHTML = this.value;
     document.getElementById('link-range-update').setAttribute("href", `/update-maxDistance-user/${this.value}`)
   }
-
-
 </script>
